--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-ngdocs": "~0.1.5",
     "karma-sauce-launcher": "0.0.6",
     "karma": "~0.9.6",
+    "karma-jasmine": "latest",
     "grunt-curl": "~1.1.1"
   },
   "engine": "node 0.8.x",
